# DesktopMop

./: CMakeLists.txt  LICENSE.txt  readme.md
include/DesktopMop/: Config.hpp  Const.hpp  ID.hpp  KnownFolders.hpp  Log.hpp  OnExitScope.hpp  Settings.hpp  Util.hpp  WindowState.hpp  Windows.hpp
rc/: rc.rc
src/: Config.cpp  Const.cpp  FileFilter.cpp  KnownFolders.cpp  Main.cpp  OnExitScope.cpp  UI.cpp  Util.cpp  WindowState.cpp
